# claude-code-acp

./: CONTRIBUTING.md  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  notifications.ts  useAgent.ts  useAgentConnection.ts  useUpdater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  process.rs
src/acp/: config.ts  connection.integration.test.ts  connection.live.test.ts  connection.ts  tauriChannel.ts  transport.test.ts  transport.ts  useAgentConnection.ts
src/components/: AuthBanner.test.tsx  AuthBanner.tsx  CommandPalette.test.tsx  CommandPalette.tsx  Composer.test.tsx  Composer.tsx  DeleteSessionModal.test.tsx  DeleteSessionModal.tsx  DiffView.tsx  DisconnectBanner.tsx  EffortControl.tsx  ElicitationModal.test.tsx  ElicitationModal.tsx  Header.test.tsx  Header.tsx  HistoryBrowser.test.tsx  HistoryBrowser.tsx  Markdown.css  Markdown.test.tsx  Markdown.tsx  McpServerRow.tsx  PermissionModal.test.tsx  PermissionModal.tsx  PlanChecklist.test.tsx  PlanChecklist.tsx  SessionConfigMenu.tsx  SettingsModal.test.tsx  SettingsModal.tsx  Sidebar.test.tsx  Sidebar.tsx  SidebarToggleButton.tsx  ToolCall.test.tsx  ToolCall.tsx  Transcript.tsx  UpdatePrompt.tsx  Workspace.tsx  useImageAttachments.ts
src/session/: attachments.test.ts  attachments.ts  commands.test.ts  commands.ts  config.test.ts  config.ts  diff.test.ts  (+28 more)
tasks/: plan-m1.md  plan-m2.md  plan-m3.md  plan-m4.md  plan-m5.md  plan-m6.md  plan.md  todo.md
