[package]
name = "claude-tauri"
version = "0.2.8"
description = "Personal Claude desktop app on the claude-agent-acp engine"
authors = ["sacheth"]
edition = "2021"
license = "MIT"

[lib]
name = "claude_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
